Added a cache wrapper around the perlin noise functions, which helps a bit, but is still very slow

--- a/examples/vanilla/plugins/vanilla-terrain/Cargo.toml
+++ b/examples/vanilla/plugins/vanilla-terrain/Cargo.toml
@@ -8,6 +8,8 @@ crate-type = ["cdylib"]
 
 [dependencies]
 bb_plugin = { path = "../../../../bb_plugin" }
+float-ord = "0.3.2"
+parking_lot = "0.12.0"
 
 # Seperate workspace
 [workspace]
