--- a/bb_ffi/Cargo.toml
+++ b/bb_ffi/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-wasmer-types = { version = "2.2.1", default-features = false, features = ["std"], optional = true }
+wasmer-types = { version = "2.2.1", default-features = false, optional = true }
 
 [build-dependencies]
 cbindgen = { version = "0.20.0", optional = true }
