Started adding blocks, items, entities, and particles to bb_plugin

--- a/bb_ffi/Cargo.toml
+++ b/bb_ffi/Cargo.toml
@@ -11,6 +11,7 @@ wasmer = { version = "2.2.1", default-features = false, features = ["sys"], opti
 
 [build-dependencies]
 cbindgen = { version = "0.20.0", optional = true }
+bb_data = { path = "../bb_data" }
 
 [features]
 host = ["wasmer", "cbindgen"]
