Added functions to read/write tile entities to disk. Can serialize inventories to disk

--- a/bb_server/Cargo.toml
+++ b/bb_server/Cargo.toml
@@ -17,6 +17,7 @@ path = "src/main.rs"
 bb_common = { path = "../bb_common" }
 bb_transfer = { path = "../bb_transfer" }
 bb_plugin_macros = { path = "../bb_plugin_macros" }
+bb_macros = { path = "../bb_macros" }
 # logger
 log = "0.4"
 
