--- a/bb_data/Cargo.toml
+++ b/bb_data/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+toml = "0.5"
 convert_case = "0.4.0"
 itertools = "0.10.0"
 
