--- a/bb_proxy/Cargo.toml
+++ b/bb_proxy/Cargo.toml
@@ -49,5 +49,7 @@ pprof = { version = "0.6.1", features = ["protobuf"], optional = true }
 # command line args
 clap = { version = "3.0.6", features = ["derive"] }
 
+concat-idents = "1.1.3"
+
 [build-dependencies]
 bb_data = { path = "../bb_data" }
