--- a/bb_proxy/Cargo.toml
+++ b/bb_proxy/Cargo.toml
@@ -17,8 +17,7 @@ path = "src/main.rs"
 bb_common = { path = "../bb_common" }
 bb_transfer = { path = "../bb_transfer" }
 log = "0.4"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 md5 = "0.7.0"
