--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ pages:
     - mkdir -p public/
     - rm -rf public/*
     - mkdir -p public/doc/sugarlang/ public/doc/rust
-    - cp -r bb_server/target/panda_docs/* public/doc/sugarlang/
+    - cp -r bb_server/target/panda_docs/* public/doc/panda/
     - cp -r target/doc/* public/doc/rust/
 
     # Upload to codecov
