--- a/bb_server/Cargo.toml
+++ b/bb_server/Cargo.toml
@@ -68,7 +68,7 @@ nix = "0.26.2"
 bb_data = { path = "../bb_data" }
 
 [dev-dependencies]
-pprof = { version = "0.11.0", features = ["criterion", "protobuf"] }
+pprof = { version = "0.11.0", features = ["criterion", "flamegraph"] }
 criterion = "0.4.0"
 pretty_assertions = "1.2.0"
 
