--- a/bb_server/Cargo.toml
+++ b/bb_server/Cargo.toml
@@ -51,7 +51,7 @@ clap = { version = "4.1.4", features = ["derive"] }
 # plugins
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-pyo3 = { version = "0.18.1", optional = true }
+pyo3 = { version = "0.18.1", default-features = false, features = ["macros"], optional = true }
 wasmer = { version = "2.2.1", default-features = false, features = ["default-cranelift", "default-universal"], optional = true }
 bb_ffi = { path = "../bb_ffi", features = ["host"], optional = true }
 
